--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -20,8 +20,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-12 col-sm-12 col-md-3">
                                     <div class="profile-image-box mx-auto">
-                                        <img th:src="${user.avatar == null} ? @{/static/images/login.png} : @{{avatar}(avatar = ${user.avatar})}"
-                                             class="profile-image-img mx-auto" id="profileImg" alt="">
+                                        <img th:src="${userPicture}" class="profile-image-img mx-auto" id="profileImg" alt="">
                                         <!--th:src="${user.avatar == null} ? @{/static/images/login.png} : @{{avatar}(avatar = ${user.avatar})}"-->
                                     </div>
                                     <div class="col-auto col-sm-auto col-md-12">
